--- a/index.html
+++ b/index.html
@@ -12,26 +12,28 @@
         </header>
         <main>
             <img src="./assets/header1.jpg" height="675">
-            <article>
-                <h2>overskrift</h2>
-                <p class="first-paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Vestibulum a porttitor sem, non auctor magna. Praesent luctus vestibulum ligula ut viverra. 
-                    Proin a mattis arcu, varius rutrum purus. Nulla malesuada quam nisl, quis gravida mauris 
-                    tincidunt eget. Nullam ac dapibus justo. Proin fermentum dictum dolor, a faucibus urna aliquet 
-                    ut. Nullam gravida sem nec urna semper gravida. Maecenas vel vestibulum nisl. Praesent vehicula 
-                    tempor velit ut varius. Nunc congue purus nec ipsum commodo mattis.
-                </p>
-                <br>
+        <section class="sticky-box">
+            <p class="first-paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Vestibulum a porttitor sem, non auctor magna. Praesent luctus vestibulum ligula ut viverra. 
+                Proin a mattis arcu, varius rutrum purus. Nulla malesuada quam nisl, quis gravida mauris 
+                tincidunt eget. Nullam ac dapibus justo. Proin fermentum dictum dolor, a faucibus urna aliquet 
+                ut. Nullam gravida sem nec urna semper gravida. Maecenas vel vestibulum nisl. Praesent vehicula 
+                tempor velit ut varius. Nunc congue purus nec ipsum commodo mattis.
+            </p> 
+        </section>
+            <br>
                 <h3>Paws?</h3>
                 <p id="second-paragraph">
                     A lot of fun in this page right here, have you ever seen such glory?
                     <a href="https://no.pinterest.com/pin/830843831264773483/">Se på katter!</a>
                 </p>
-                
-            </article> 
             <br>
-            <div class="katt1" img src="./assets/katt1.jpg">
+            <div class="main-picture">
+                <img src="./assets/katt1.jpg" class="picture-cat">
+            </div>
+            <div class="my-box">
+                <div class="inside-box">Boxen minnn</div>
             </div>
         </main>
     </body>
